; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/chibios/extr_flash_stm32.c_FLASH_WaitForLastOperation.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/chibios/extr_flash_stm32.c_FLASH_WaitForLastOperation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLASH_BUSY = common dso_local global i64 0, align 8
@FLASH_TIMEOUT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @FLASH_WaitForLastOperation(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = call i64 (...) @FLASH_GetStatus()
  store i64 %4, i64* %3, align 8
  br label %5

5:                                                ; preds = %14, %1
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @FLASH_BUSY, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %5
  %10 = load i32, i32* %2, align 4
  %11 = icmp ne i32 %10, 0
  br label %12

12:                                               ; preds = %9, %5
  %13 = phi i1 [ false, %5 ], [ %11, %9 ]
  br i1 %13, label %14, label %19

14:                                               ; preds = %12
  %15 = call i32 (...) @delay()
  %16 = call i64 (...) @FLASH_GetStatus()
  store i64 %16, i64* %3, align 8
  %17 = load i32, i32* %2, align 4
  %18 = add nsw i32 %17, -1
  store i32 %18, i32* %2, align 4
  br label %5

19:                                               ; preds = %12
  %20 = load i32, i32* %2, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %19
  %23 = load i64, i64* @FLASH_TIMEOUT, align 8
  store i64 %23, i64* %3, align 8
  br label %24

24:                                               ; preds = %22, %19
  %25 = load i64, i64* %3, align 8
  ret i64 %25
}

declare dso_local i64 @FLASH_GetStatus(...) #1

declare dso_local i32 @delay(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
